# AvitoAnalyticsAcademy

./: README.md
aaa_t_recs_diploma/: Makefile  README.md  locust.py  pyproject.toml
aaa_t_recs_diploma/cmd/app/: main.py
aaa_t_recs_diploma/config/: config.yaml
aaa_t_recs_diploma/docker/: build.sh  docker-compose.yaml  install.sh  run.sh  run_app.sh
aaa_t_recs_diploma/docker/image/: Dockerfile
aaa_t_recs_diploma/internal/adapter/database/faiss/: __init__.py  item.py
aaa_t_recs_diploma/internal/adapter/database/sql/: __init__.py  item.py  user.py
aaa_t_recs_diploma/internal/app/: app.py
aaa_t_recs_diploma/internal/domain/service/: __init__.py  item.py  user.py  user_item.py
aaa_t_recs_diploma/internal/storage/database/faiss/: __init__.py  index.py
aaa_t_recs_diploma/internal/transport/handler/: __init__.py  item.py  user.py  user_item.py
aaa_t_recs_diploma/notebooks/: 01-exploration.ipynb  02-preprocessing.ipynb  03-baseline-similarcat.ipynb  03-baseline_word2vec.ipynb  04-collaborative-als-catboost-full-pipeline.ipynb  04-collaborative-als-catboost.ipynb  04-collaborative-als.ipynb  05-content-tf-text.ipynb
aaa_t_recs_diploma/src/data/: __init__.py  preprocessing.py
aaa_t_recs_diploma/src/eval/: __init__.py  metrics.py
aaa_t_recs_diploma/src/model/baseline/: __init__.py  word2vec.py
aaa_t_recs_diploma/src/model/collaborative/: __init__.py  als.py  router.py
aaa_t_recs_diploma/src/model/collaborative/utils/: __init__.py  (+1 more)
aaa_t_recs_diploma/test/data/: test_preprocessing.py
aaa_t_recs_diploma/views/templates/: main.html  recommendation.html
(+18 files in other folders)
