[project]
name = "aaa-t-recs"
version = "0.1.0"
description = "С этим также покупают (ААА-2025)"
authors = [
    {name = "Команда T-Recs"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "gensim (>=4.3.3,<5.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "implicit (>=0.7.2,<0.8.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "datasets (>=3.6.0,<4.0.0)",
    "transformers (>=4.52.3,<5.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "accelerate (>=1.7.0,<2.0.0)",
    "protobuf (>=6.31.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
